# 2023-2024

./: LICENSE  README.md
ACSE/acds-the-day-after-tomorrow-olga/: LICENSE  setup.py
ACSE/acs-deepimpact-ceres/: UserInterface.ipynb  download_data.py  setup.py
AdvancedProgramming/advanced-programming-group-depth-first-search/: license.md
ComputationalMath/cm-assessment-202324-acse-fh223/: README.md
DeepLearning/dlmodule-coursework-1-acse-fh223/: your_username_DLcw1_hypertune.ipynb
DeepLearning/dlmodule-coursework-2-acse-fh223/: acse_fh223_DLcw2_clean.ipynb  acse_fh223_classified_hands.csv
InversionAndOptimisation/inversion-and-optimisation-assessment-1-acse-fh223/: README.md  assessment.ipynb  part1.ipynb  part2.ipynb
InversionAndOptimisation/inversion-and-optimisation-assessment-2-acse-fh223/: Q1.ipynb  Q3.ipynb
ModellingNumericalMethods/mnm-coursework-2-acse-fh223/: README.md
ModellingNumericalMethods/mnm-coursework-acse-fh223/: Piggott-acse-fh223.ipynb  README.md
ModernProgrammingMethods/mpm-assessment-1-acse-4a1d50ca/: automata.py
ModernProgrammingMethods/mpm-assessment-2-acse-4a1d50ca/: .flake8  README.md  environment.yml  numpy_compare.ipynb  requirements.txt
ParallelProgramming/acse-ppp-openmp-acse-fh223/: README.md
ParallelProgramming/ppp-mpi-assessment-acse-fh223/: Serial_Reaction_Equations.cpp  Serial_Video.py
acs/acds-the-day-after-tomorrow-olga/: Pipeline.ipynb  README.md  olga_windpredictions.csv  requirements.txt
acs/acs-deepimpact-ceres/: DamageMapper.ipynb  README.md  requirements.txt
acs/acs-gerardium-rush-sphalerite/: CMakeLists.txt  README.md
ap/advanced-programming-assessment-1-acse-fh223/: README.md
ap/advanced-programming-assessment-2-acse-fh223/: README.md
ap/advanced-programming-group-depth-first-search/: .gitignore  CMakeLists.txt  README.md
ap/advanced-programming-group-depth-first-search/documentation/html/: _image_8h_source.html  _user_interface_8h_source.html  annotated.html  class_filter-members.html  class_filter.html  class_image.html  class_projection-members.html  class_user_interface-members.html  class_volume-members.html  class_volume.html  class_volume.js  classes.html  colour__correction_8h_source.html  dir_0ab2b3774475639e1f534c1b82940bdc.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6a3b2b7d5f69bb0e909f30f02f2166c6.js  dir_78f1e8abfa8645fdfed074c40fab1bd7.html  dir_78f1e8abfa8645fdfed074c40fab1bd7.js  doxygen_crawl.html  edge__detection_8h_source.html  files.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js  stb__image__write_8h_source.html  struct_h_s_v_pixel.html  structstbi__io__callbacks-members.html  structstbi__io__callbacks.html  three_d__image__blur_8h_source.html
ap/advanced-programming-group-depth-first-search/documentation/html/search/: all_2.js  all_3.js  all_8.js  all_a.js  all_b.js  all_c.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  searchdata.js
ap/advanced-programming-group-depth-first-search/documentation/latex/: _filter_8h_source.tex  _projection_8h_source.tex  _volume_8h_source.tex  annotated.tex  class_image.tex  class_projection.tex  class_slice.tex  colour__correction_8h_source.tex  edge__detection_8h_source.tex  files.tex  image__blur_8h_source.tex  refman.tex  struct_h_s_l_pixel.tex  structstbi__io__callbacks.tex  three_d__image__blur_8h_source.tex
ap/advanced-programming-group-depth-first-search/executables/: advanced_programming_group_depth_first_search  test_edge
ap/advanced-programming-group-depth-first-search/src/: Filter.h  Image.cpp  Image.h  Slice.cpp  UserInterface.h  Volume.h  main.cpp
ap/advanced-programming-group-depth-first-search/src/2D/edge_detection/: edge_detection.cpp  edge_detection.h
ap/advanced-programming-group-depth-first-search/src/2D/image_blur/: image_blur.cpp
ap/advanced-programming-group-depth-first-search/tests/2D/: test_colour_correction.cpp  test_edge_detection.cpp  test_edge_detection.h  test_image_blur.cpp
ap/advanced-programming-group-depth-first-search/tests/2D/help_code/: gauss.py  robertstest.py  scharr_test.py  sobeltest.py
ap/advanced-programming-group-depth-first-search/tests/3D/: test3d.cpp
cm/cm-assessment-202324-acse-fh223/: CM-Nov2023-assessment-questions.ipynb
ppp/acse-ppp-openmp-acse-fh223/: CMakeLists.txt
ppp/acse-ppp-openmp-acse-fh223/assignment-1/: HelloWorld.cpp
ppp/acse-ppp-openmp-acse-fh223/assignment-2/: area.cpp
ppp/acse-ppp-openmp-acse-fh223/assignment-3/: domove.cpp  evaluate.pbs  expected_output.txt  forces.cpp  prnout.cpp
(+197 files in other folders)
